fix errors in css code

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -434,7 +434,7 @@ footer {
 
 /* footer paragraphs */
 footer p {
-  font-sizet: 8px;
+  font-size: 8px;
 }
 
 /**************************Desktop version *********************************/
