--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -731,6 +731,7 @@ footer p {
     display: flex;
     flex-direction: row;
   }
+
   /* moving al the cards our service margin */
   .service,
   .dig-card,
@@ -740,6 +741,7 @@ footer p {
   .pri-card {
     margin-top: -50%;
   }
+
   .video-card,
   .web-card,
   .pri-card {
@@ -830,6 +832,7 @@ footer p {
     margin-bottom: 20%;
     padding-right: 50%;
   }
+
   /* bob image  */
   .bob {
     width: 100%;
@@ -873,45 +876,49 @@ footer p {
   hour of Operation */
   .width-max,
   .margin {
+    margin: 0 auto;
   }
 
   /* forms  */
 
-  #contactus {
+  /* #contactus {
+  } */
+
+  /* full form, location and hours of operation */
+  .allftm {
+    max-width: 1200px;
+    margin: 0 auto;
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
+  }
+ 
+  .forms-1 {
+    
   }
 
-  /* full form */
+    
+  .mps {
+    grid-row ;
+    grid-column: 1/-4;
+    ;
 
-  /* contact us  */
-  .title-h {
+  
+  }
+
+  .open-s {
+    grid-column:1/-2 ;
+    grid-row: 1/4 ;
   }
 
   /* title for send us a message  */
-  .sends {
-  }
-
-  .form ul li {
-  }
 
   /*  table of open close operation */
-  caption {
-    position: relative;
-    right: 35%;
-    font-weight: bold;
-  }
-
-  .open-s table tr th {
-  }
-
-  .open-s table tr td {
-  }
 
   /* map formate sizes image  */
   iframe {
-    /* margin-bottom: 3%;
-    margin-top: -100%;
-    position: relative;
-    left: 45%; */
+    width: 60%;
+    height: 60%;
   }
 
   /* footer */
