add rows to nav bar top of desktop version

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -518,9 +518,11 @@ footer p {
   }
 
   /* search tool bar home abourt services teams contact
-  week 5 text-decoration */
-  .to-bar:nth-child(1) {
+  week 5 text-decoration  week 11 visual studio code 
+  flex box assignment  */
+  .bar-li:nth-child(1) {
     display: flex;
+    flex-direction: row;
   }
 
   /* hover and focus tool bar */
